--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -4,9 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>To Do List</title>
+    <!-- <base href="/stylesheets/bulma.min.css" /> -->
+    <link rel="stylesheet" href="/stylesheets/bulma.min.css" />
+    <title>Lista de Tarefas</title>
   </head>
   <body>
-    <h1>Meu To do List</h1>
+    <nav class="navbar is-black">
+      <div class="navbar-brand">
+        <a class="navbar-item" href="#">
+          TODO-List
+        </a>
+        <div
+          class="navbar-burger burger"
+          data-target="navMenuColorblack-example"
+        >
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    </nav>
+
+    <section class="section hero is-link is-fullheight-with-navbar">
+      <div class="hero-body has-text-centered">
+        <div class="container">
+          <h1 class="title">
+            TODO-List
+          </h1>
+          <h2 class="subtitle">
+            Geranciando nossas atividades diárias =D
+          </h2>
+          <a href="list-checklists.html" class="button is-light is-medium"
+            >Ir para Listas de Atividades!</a
+          >
+        </div>
+      </div>
+    </section>
   </body>
 </html>
