--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- <base href="/stylesheets/bulma.min.css" /> -->
     <link rel="stylesheet" href="/stylesheets/bulma.min.css" />
-    <title>Lista de Tarefas</title>
+    <title><%= title %></title>
   </head>
   <body></body>
 </html>
