--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -9,7 +9,7 @@ include("../layouts/menu") %>
       <h2 class="subtitle">
         Geranciando nossas atividades diárias =D
       </h2>
-      <a href="list-checklists.html" class="button is-light is-medium"
+      <a href="/checklists" class="button is-light is-medium"
         >Ir para Listas de Atividades!</a
       >
     </div>
