--- a/src/views/checklists/index.ejs
+++ b/src/views/checklists/index.ejs
@@ -23,7 +23,7 @@ include("../layouts/menu") %>
               <%= checklist.name %>
             </p>
             <p class="subtitle is-size-6">
-              <%= checklist.tasks.count %> tarefas
+              <%= checklist.tasks.length %> tarefas
             </p>
           </div>
           <footer class="card-footer">
